# wireguard-rest-api-rs

./: Cargo.toml  README.md  test-client-config.conf  test-extended-syntax.conf  test-wg0-complex.conf  test-wg0.conf
src/: api.rs  error.rs  main.rs  wireguard_cli.rs  wireguard_conf.rs
