[package]
name = "wireguard-rest-api-rs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = "3.0.0-beta.2"
eyre = "0.6.8"
futures = "0.3.21"
indexmap = { version = "1.6.2", features = ["serde-1"] }
itertools = "0.10.3"
log = "0.4.14"
nom = "6.1.2"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0.25"
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"
uuid = { version = "1.1.2", features = ["v4"] }
warp = "0.3"
